# claw-router

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PROJECT_INDEX.json  README.md  TASK-rust-rewrite.md  pyproject.toml
.omc/state/: agent-replay-77a10a49-de81-4ad5-b494-d0f91c49e0ba.jsonl  hud-state.json  hud-stdin-cache.json  last-tool-error.json
config/: .env.example  hubs.prod.bak  hubs.yaml  hubs.yaml.bak  routes.yaml
deploy/: claw-router.service  deploy.sh
src/claw_router/: __init__.py  __main__.py  breaker.py  classifier.py  cli.py  config.py  dashboard.py  health.py  logging_config.py  protocols.py  router.py  server.py  upstream.py
tests/: test_admin.py  test_breaker.py  test_classifier.py  test_protocols.py  test_router.py
